// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Guard Должен корректно отрендериться isAllowed=false 1`] = `
<Fragment>
  isFallback
</Fragment>
`;

exports[`Guard Должен корректно отрендериться isAllowed=true 1`] = `
<Fragment>
  isAllowed
</Fragment>
`;
